--- a/assets/index.html
+++ b/assets/index.html
@@ -20,16 +20,16 @@
               <li class="list-group-item">Ryan</li>
               <li class="list-group-item">Manager</li>
               <li class="list-group-item">1</li>
-              <li class="list-group-item">email@email.com</li>
-              <li class="list-group-item">12</li>
+              <li class="list-group-item">email@yata.com</li>
+              <li class="list-group-item">101</li>
             </ul>
           </div><div class="card" style="width: 18rem;">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Ryan Jr</li>
+              <li class="list-group-item">Ryan jr</li>
               <li class="list-group-item">Intern</li>
               <li class="list-group-item">2</li>
-              <li class="list-group-item">email@gmail.com</li>
-              <li class="list-group-item">ryanJr</li>
+              <li class="list-group-item">hello@yougethweDF</li>
+              <li class="list-group-item">ryanh610</li>
             </ul>
           </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
